apps/construct/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tao
  labels: &labels
    tier: tao
spec:
  selector:
    matchLabels:  *labels
  template:
    metadata:
      labels: *labels
    spec:
        
      containers:
      - image: tao/construct/backend
        resources: {}
        name: backend
        envFrom: &construct-envFrom
        - secretRef:
            name: tao-env
        env: &construct-env
        - name: CONSTRUCT_BASE_URL
          value: https://community.tao.internal/backoffice/

        volumeMounts:
          - mountPath: /data
            name: construct-data
          - name: construct-config-init
            mountPath: /usr/local/etc/tao/init/construct-seed.json
            subPath: construct-seed.json
      - image: tao/construct/backend
        resources: {}
        name: worker
        command:
        - taoadm
        - worker
        envFrom: *construct-envFrom
        env: *construct-env
        volumeMounts:
          - mountPath: /data
            name: construct-data
          - name: construct-config-init
            mountPath: /usr/local/etc/tao/init/construct-seed.json
            subPath: construct-seed.json            
      - image: tao/construct/frontend
        resources: {}
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http 
        name: frontend
        volumeMounts:
          - name: construct-data
            mountPath: /srv/static/construct/tao/views/locales
            subPath: construct/locales
          - name: construct-config-frontend
            mountPath: /etc/caddy/Caddyfile
            subPath: Caddyfile
      
      restartPolicy: Always
      securityContext: {}
      volumes:
        - name: construct-data
          hostPath:
            path: /data/tao/construct
        - name: construct-config-init
          configMap:
            name: tao-config
            items:
              - key: construct-seed
                path: construct-seed.json
        - name: construct-config-frontend
          configMap:
            name: tao-config
            items:
              - key: Caddyfile
                path: Caddyfile

---
apiVersion: v1
kind: Service
metadata:
  name: tao
  labels:
    tier: tao
spec:
  selector:
    tier: tao
  ports:
  - port: 8080
    targetPort: 8080
